small spacing & logic fix

--- a/front/src/components/cars/Cars.css
+++ b/front/src/components/cars/Cars.css
@@ -21,6 +21,7 @@
     box-shadow: rgba(170, 167, 167, 0.12) 0px 11px 12px,
     rgba(170, 167, 167, 0.12) 0px -6px 15px, rgba(170, 167, 167, 0.12) 0px 2px 3px,
     rgba(170, 167, 167, 0.12) 0px 6px 6px, rgba(170, 167, 167, 0.12) 0px -1px 3px;
+    margin-bottom: 2rem;
   }
 
   .section-filters{
